--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
       // 作用：调试时加载ts-node包（在调试时“直接”运行ts代码）
       "runtimeArgs": ["-r", "ts-node/register"],
       // 此处的 a.ts 表示要调试的 TS 文件（ 可修改为其他要调试的ts文件 ）
-      "args": ["./test.ts"]
+      "args": ["./4.寻找两个正序数组的中位数.ts"]
     }
   ]
 }
